<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTaskActivity">

    <Spinner
        android:id="@+id/addTaskEnumOwnerTypeSpinner"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="add_task_owner"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskEnumTypeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/addTaskTitle"
        android:layout_width="120dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="44dp"
        android:text="@string/add_task3"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskETTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/AddTaskETTitle"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/my_task"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/AddTaskEDTitle"
        android:layout_width="291dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/task_description2"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskETTitle"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/add_task_activity_button"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginTop="66dp"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskEDTitle"
        app:layout_constraintVertical_bias="0.664"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/submitted_confirmation"
        android:layout_width="180dp"
        android:layout_height="27dp"
        android:textColor="#DD0000"
        app:layout_constraintBottom_toTopOf="@+id/add_task_activity_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskEnumTypeSpinner"
        app:layout_constraintVertical_bias="0.694" />

    <TextView
        android:id="@+id/taskTitleAboveTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/task_title"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskETTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="2dp"
        android:text="@string/task_description"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskEDTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskETTitle"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="291dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/task_date2"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskEDTitle"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/task_date"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskEDTitle"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/AddTaskEnumTypeSpinner"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="spinner"
        app:layout_constraintBottom_toTopOf="@+id/add_task_activity_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:layout_constraintVertical_bias="0.647" />

    <ImageView
        android:id="@+id/addTaskActivityImageSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/addTaskTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>